Terraform/route_and_lb.tf
resource "aws_route53_zone" "primary" {
  name = var.primary_zone_address
}

resource "aws_route53_zone" "dev" {
  name = var.d_name

}


resource "aws_route53_record" "dev-ns" {
  zone_id = aws_route53_zone.primary.zone_id
  name    = var.d_name
  type    = "NS"
  ttl     = "30"
  records = aws_route53_zone.dev.name_servers
}



resource "aws_acm_certificate" "acm_cert" {
  domain_name       = var.d_name
  validation_method = "DNS"

  lifecycle {
    create_before_destroy = true
  }
}


resource "aws_route53_record" "example" {
  for_each = {
    for dvo in aws_acm_certificate.acm_cert.domain_validation_options : dvo.domain_name => {
      name   = dvo.resource_record_name
      record = dvo.resource_record_value
      type   = dvo.resource_record_type
    }
  }

  allow_overwrite = true
  name            = each.value.name
  records         = [each.value.record]
  ttl             = 60
  type            = each.value.type
  zone_id         = "Z3AYJUIAXBOLK2"
}

resource "aws_acm_certificate_validation" "validation" {
  certificate_arn         = aws_acm_certificate.acm_cert.arn
  validation_record_fqdns = [for record in aws_route53_record.validation : record.fqdn]
}




resource "aws_route53_record" "www" {
  zone_id = aws_route53_record.primary.zone_id
  name    = var.d_name
  type    = "A"

  alias {
    name                   = aws_lb.loadbalancer.dns_name
    zone_id                = aws_lb.loadbalancer.zone_id
    evaluate_target_health = true
  }
}



resource "aws_lb" "loadbalancer" {
  name               = "helloworld-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [module.vpc.public_subnets[0], module.vpc.public_subnets[1], module.vpc.public_subnets[2]]

  enable_deletion_protection = false

}

resource "aws_lb_target_group_attachment" "tg-attach" {
  target_group_arn = aws_lb_target_group.tg.arn
  target_id        = aws_instance.web.id
  port             = 80
}

resource "aws_lb_target_group" "tg" {
  name     = "helloworld-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = module.vpc.vpc_id

}


resource "aws_lb_listener" "listener_rules" {
  load_balancer_arn = aws_lb.loadbalancer.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate_validation.validation.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}

resource "aws_lb_listener_rule" "static" {
  listener_arn = aws_lb_listener.listener.arn
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }

  condition {
    path_pattern {
      values = ["/*"]
    }
  }
}
